--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Codeup Design</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- Your custom css styles go here -->
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="bg-light">
+    <div class="container-lg text-center">
+        <img class="logo" src="assets/images/logo.png" alt="Logo" >
+        <header>
+            <h2 class="design">codeup design</h2>
+        </header>
+        <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
+        <h2>FROM PARK CITY, UTAH</h2>
 
+            <ul id="buttons">
+                <li>DESIGN</li>
+                <li>SUPPORT</li>
+                <li>DEVELOP</li>
+                <li>HOST</li>
+            </ul>
+
+
+    </div>
+
+
+
+
+
+<!-- Main page content -->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<!-- Your custom JS goes here -->
 </body>
 </html>
