working on mobile layout

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
 </head>
-<body class="bg-light">
+<body>
     <div class="container-lg text-center">
         <img class="logo" src="assets/images/logo.png" alt="Logo" >
         <header>
@@ -21,16 +21,31 @@
         </header>
         <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
         <h2>FROM PARK CITY, UTAH</h2>
-
-            <ul id="buttons">
-                <li>DESIGN</li>
-                <li>SUPPORT</li>
-                <li>DEVELOP</li>
-                <li>HOST</li>
-            </ul>
-
-
+        <div id="circles" class="row">
+            <div>
+            <div class="circle col-xs-12" id="design">
+                DESIGN
+            </div>
+            <div class="circle" id="support">
+                SUPPORT
+            </div>
+            </div>
+            <div>
+            <div class="circle col-xs-12" id="develop">
+                DEVELOP
+            </div>
+            <div class="circle" id="host">
+                HOST
+            </div>
+            </div>
+        </div>
     </div>
+    <section>
+    <div>
+        <p>SELECTED WORK</p>
+    </div>
+        <img class="ipad" src="assets/images/apple-ipad.jpg">
+    </section>
 
 
 
