added featured products

--- a/index.html
+++ b/index.html
@@ -12,40 +12,60 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/678a847b7a.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container-lg text-center">
-        <img class="logo" src="assets/images/logo.png" alt="Logo" >
-        <header>
-            <h2 class="design">codeup design</h2>
-        </header>
-        <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
-        <h2>FROM PARK CITY, UTAH</h2>
-        <div id="circles" class="row">
-            <div>
-            <div class="circle col-xs-12" id="design">
-                DESIGN
+
+        <div class="container-lg text-center">
+            <img class="logo" src="assets/images/logo.png" alt="Logo" >
+            <header>
+                <h2 class="design">codeup design</h2>
+            </header>
+            <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
+            <h2>FROM PARK CITY, UTAH</h2>
+    <main>
+        <section>
+            <div id="circles" class="row">
+                <div class="col-6 d-flex justify-content-end">
+                    <div class="circle" id="design">
+                        DESIGN
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="circle" id="develop">
+                        DEVELOP
+                    </div>
+
+                </div>
+                <div class="col-6 d-flex justify-content-end ">
+                    <div class="circle" id="support">
+                        SUPPORT
+                    </div>
+                </div>
+                    <div class="col-6">
+                    <div class="circle" id="host">
+                        HOST
+                    </div>
+                </div>
             </div>
-            <div class="circle" id="support">
-                SUPPORT
-            </div>
-            </div>
-            <div>
-            <div class="circle col-xs-12" id="develop">
-                DEVELOP
-            </div>
-            <div class="circle" id="host">
-                HOST
-            </div>
-            </div>
+        </section>
+        <section>
+        <div>
+            <p>SELECTED WORK</p>
         </div>
-    </div>
-    <section>
-    <div>
-        <p>SELECTED WORK</p>
-    </div>
-        <img class="ipad" src="assets/images/apple-ipad.jpg">
-    </section>
+
+                <img class="ipad" src="assets/images/apple-ipad.jpg">
+
+                <div id="dot" class="row d-flex justify-content-end">
+                    <p class="mr-auto">FEATURED PROJECT</p>
+                    <div class="dotty" id="D1">D</div>
+                    <div class="dotty" id="D2">D</div>
+                    <div class="dotty" id="S">S</div>
+                    <div class="dotty" id="H">H</div>
+                </div>
+        </section>
+    </main>
+
 
 
 
