more edits to mobile layout

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <img class="ipad" src="assets/images/apple-ipad.jpg">
 
                 <div id="dot" class="row d-flex justify-content-end">
-                    <p class="mr-auto">FEATURED PROJECT</p>
+                    <p>FEATURED PROJECT</p>
                     <div class="dotty" id="D1">D</div>
                     <div class="dotty" id="D2">D</div>
                     <div class="dotty" id="S">S</div>
