fixed the small circles

--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
                     <div class="circle" id="develop">
                         DEVELOP
                     </div>
-
                 </div>
-                <div class="col-6 d-flex justify-content-end ">
+                <div class="col-6 d-flex justify-content-end">
                     <div class="circle" id="support">
                         SUPPORT
                     </div>
@@ -53,16 +52,17 @@
         <div>
             <p>SELECTED WORK</p>
         </div>
-
+            <div class="btm">
                 <img class="ipad" src="assets/images/apple-ipad.jpg">
 
-                <div id="dot" class="row d-flex justify-content-end">
-                    <p>FEATURED PROJECT</p>
-                    <div class="dotty" id="D1">D</div>
-                    <div class="dotty" id="D2">D</div>
-                    <div class="dotty" id="S">S</div>
-                    <div class="dotty" id="H">H</div>
+                <div id="dot" class="row d-flex justify-content-end mt-2">
+                    <p class="mr-auto">FEATURED PROJECT</p>
+                    <div class="dotty mr-2" id="D1">D</div>
+                    <div class="dotty mr-2" id="D2">D</div>
+                    <div class="dotty mr-2" id="S">S</div>
+                    <div class="dotty mr-2" id="H">H</div>
                 </div>
+            </div>
         </section>
     </main>
 
