completed xs layout

--- a/index.html
+++ b/index.html
@@ -17,14 +17,19 @@
 <body>
 
         <div class="container-lg text-center">
-            <img class="logo" src="assets/images/logo.png" alt="Logo" >
             <header>
-                <h2 class="design">codeup design</h2>
+                <section class="profile">
+                    <div class="profile-header">
+                        <img class="logo" src="assets/images/logo.png" alt="Logo" >
+                    </div>
+                </section>
             </header>
-            <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
-            <h2>FROM PARK CITY, UTAH</h2>
+            <h2 class="design">codeup design</h2>
+            <h1 class="mt-5">VISUAL DESIGN & WEB DEVELOPMENT</h1>
+            <h2 class="mt-4">FROM PARK CITY, UTAH</h2>
+
     <main>
-        <section>
+        <section class="mt-5">
             <div id="circles" class="row">
                 <div class="col-6 d-flex justify-content-end">
                     <div class="circle" id="design">
@@ -48,7 +53,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="btm-sec">
         <div>
             <p>SELECTED WORK</p>
         </div>
@@ -65,6 +70,7 @@
             </div>
         </section>
     </main>
+        </div>
 
 
 
