started mods for sm display

--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
     <main>
         <section class="mt-5">
             <div id="circles" class="row">
-                <div class="col-6 d-flex justify-content-end">
+                <div class="col-6 col-sm-3 d-flex justify-content-end justify-content-sm-center p-0">
                     <div class="circle" id="design">
                         DESIGN
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-sm-3 d-flex justify-content-sm-center p-0">
                     <div class="circle" id="develop">
                         DEVELOP
                     </div>
                 </div>
-                <div class="col-6 d-flex justify-content-end">
+                <div class="col-6 col-sm-3 d-flex justify-content-end justify-content-sm-center p-0">
                     <div class="circle" id="support">
                         SUPPORT
                     </div>
                 </div>
-                    <div class="col-6">
+                    <div class="col-6 col-sm-3 d-flex justify-content-sm-center p-0">
                     <div class="circle" id="host">
                         HOST
                     </div>
@@ -58,7 +58,12 @@
             <p>SELECTED WORK</p>
         </div>
             <div class="btm">
-                <img class="ipad" src="assets/images/apple-ipad.jpg">
+
+                        <img class="ipad" src="assets/images/apple-ipad.jpg" alt="Laptop">
+                        <img class="d-none d-md-block" src="assets/images/macbook.jpg" alt="Macbook">
+                        <img class="d-none d-md-block" src="assets/images/man.jpg" alt="Man">
+                        <img class="d-none d-md-block" src="assets/images/security.jpg" alt="Security">
+
 
                 <div id="dot" class="row d-flex justify-content-end mt-2">
                     <p class="mr-auto">FEATURED PROJECT</p>
