edits into bigger sizes of layout

--- a/index.html
+++ b/index.html
@@ -53,18 +53,27 @@
                 </div>
             </div>
         </section>
+        <hr class="d-none d-sm-block">
         <section id="btm-sec">
         <div>
             <p>SELECTED WORK</p>
         </div>
             <div class="btm">
-
+                <div class="row">
+                    <div class="col-sm-6">
                         <img class="ipad" src="assets/images/apple-ipad.jpg" alt="Laptop">
-                        <img class="d-none d-md-block" src="assets/images/macbook.jpg" alt="Macbook">
-                        <img class="d-none d-md-block" src="assets/images/man.jpg" alt="Man">
-                        <img class="d-none d-md-block" src="assets/images/security.jpg" alt="Security">
+                    </div>
+                    <div class="col-sm-6">
+                        <img id="macbook" class="d-none d-sm-block" src="assets/images/macbook.jpg" alt="Macbook">
+                    </div>
+                    <div class="col-sm-6">
+                        <img id="man" class="d-none d-sm-block" src="assets/images/man.jpg" alt="Man">
+                    </div>
+                    <div class="col-sm-6">
+                        <img id="security" class="d-none d-sm-block" src="assets/images/security.jpg" alt="Security">
+                    </div>
 
-
+                </div>
                 <div id="dot" class="row d-flex justify-content-end mt-2">
                     <p class="mr-auto">FEATURED PROJECT</p>
                     <div class="dotty mr-2" id="D1">D</div>
