completed the sm display

--- a/index.html
+++ b/index.html
@@ -54,32 +54,72 @@
             </div>
         </section>
         <hr class="d-none d-sm-block">
+
         <section id="btm-sec">
         <div>
             <p>SELECTED WORK</p>
         </div>
-            <div class="btm">
+            <div class="btm mt-5">
                 <div class="row">
                     <div class="col-sm-6">
                         <img class="ipad" src="assets/images/apple-ipad.jpg" alt="Laptop">
-                    </div>
-                    <div class="col-sm-6">
-                        <img id="macbook" class="d-none d-sm-block" src="assets/images/macbook.jpg" alt="Macbook">
-                    </div>
-                    <div class="col-sm-6">
-                        <img id="man" class="d-none d-sm-block" src="assets/images/man.jpg" alt="Man">
-                    </div>
-                    <div class="col-sm-6">
-                        <img id="security" class="d-none d-sm-block" src="assets/images/security.jpg" alt="Security">
+                        <div class="d-none d-sm-block">
+                                <div id="laptop-dot" class="row d-flex justify-content-end mt-2 mb-3">
+                                <p class="mr-auto feat-proj">FEATURED PROJECT</p>
+                                <div class="dotty mr-2 D1">D</div>
+                                <div class="dotty mr-2 D2">D</div>
+                                <div class="dotty mr-2 S">S</div>
+                                <div class="dotty mr-2 H">H</div>
+                            </div>
+                        </div>
                     </div>
 
+                    <div class="col-sm-6">
+                        <img id="macbook" class="d-none d-sm-block" src="assets/images/macbook.jpg" alt="Macbook">
+                        <div class="d-none d-sm-block">
+                            <div id="macbook-dot" class="row d-flex justify-content-end mt-2 mb-3">
+                                <p class="mr-auto feat-proj">FEATURED PROJECT</p>
+                                <div class="dotty mr-2 D1">D</div>
+                                <div class="dotty mr-2 D2">D</div>
+                                <div class="dotty mr-2 S">S</div>
+                                <div class="dotty mr-2 H">H</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <img id="man" class="d-none d-sm-block" src="assets/images/man.jpg" alt="Man">
+                        <div class="d-none d-sm-block">
+                            <div id="man-dot" class="row d-flex justify-content-end mt-2 mb-3">
+                                <p class="mr-auto feat-proj">FEATURED PROJECT</p>
+                                <div class="dotty mr-2 D1">D</div>
+                                <div class="dotty mr-2 D2">D</div>
+                                <div class="dotty mr-2 S">S</div>
+                                <div class="dotty mr-2 H">H</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <img id="security" class="d-none d-sm-block" src="assets/images/security.jpg" alt="Security">
+                        <div class="d-none d-sm-block">
+                            <div id="security-dot" class="row d-flex justify-content-end mt-2 mb-3">
+                                <p class="mr-auto feat-proj">FEATURED PROJECT</p>
+                                <div class="dotty mr-2 D1">D</div>
+                                <div class="dotty mr-2 D2">D</div>
+                                <div class="dotty mr-2 S">S</div>
+                                <div class="dotty mr-2 H">H</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div id="dot" class="row d-flex justify-content-end mt-2">
+
+                <div id="dot" class="row d-flex justify-content-end mt-2 d-sm-none">
                     <p class="mr-auto">FEATURED PROJECT</p>
-                    <div class="dotty mr-2" id="D1">D</div>
-                    <div class="dotty mr-2" id="D2">D</div>
-                    <div class="dotty mr-2" id="S">S</div>
-                    <div class="dotty mr-2" id="H">H</div>
+                    <div class="dotty mr-2 D1">D</div>
+                    <div class="dotty mr-2 D2">D</div>
+                    <div class="dotty mr-2 S">S</div>
+                    <div class="dotty mr-2 H">H</div>
                 </div>
             </div>
         </section>
