added 3rd column of pics

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         </div>
             <div class="btm mt-5">
                 <div class="row">
-                    <div class="col-sm-6">
+                <div class="row">
+                    <div class="col-sm-6 col-md-4">
                         <img class="ipad" src="assets/images/apple-ipad.jpg" alt="Laptop">
                         <div class="d-none d-sm-block">
                                 <div id="laptop-dot" class="row d-flex justify-content-end mt-2 mb-3">
@@ -74,7 +75,7 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-6">
+                    <div class="col-sm-6 col-md-4">
                         <img id="macbook" class="d-none d-sm-block" src="assets/images/macbook.jpg" alt="Macbook">
                         <div class="d-none d-sm-block">
                             <div id="macbook-dot" class="row d-flex justify-content-end mt-2 mb-3">
@@ -87,7 +88,7 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-6">
+                    <div class="col-sm-6 col-md-4">
                         <img id="man" class="d-none d-sm-block" src="assets/images/man.jpg" alt="Man">
                         <div class="d-none d-sm-block">
                             <div id="man-dot" class="row d-flex justify-content-end mt-2 mb-3">
@@ -100,7 +101,7 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-6">
+                    <div class="col-sm-6 col-md-4">
                         <img id="security" class="d-none d-sm-block" src="assets/images/security.jpg" alt="Security">
                         <div class="d-none d-sm-block">
                             <div id="security-dot" class="row d-flex justify-content-end mt-2 mb-3">
@@ -114,6 +115,22 @@
                     </div>
                 </div>
 
+                <div class=" d-none d-md-block col-md-4">
+                    <div>
+                        <img class="mobile-ph" src="assets/images/mobile-phone.jpg" alt="mobile phone">
+                        <p class="adminbar">THE ADMIN BAR AND ABSOLUTE POSITIONING</p>
+                    </div>
+                    <div>
+                        <img class="head-pic" src="assets/images/head.jpg" alt="head">
+                        <p class="adminbar">NIBBLER AWESOME WEBSITE TESTING</p>
+                    </div>
+                    <div>
+                        <img class="ipad-pic" src="assets/images/ipad.jpg" alt="ipad">
+                        <p class="adminbar">HOW TO GET TOOGLE LIKE YOU</p>
+                    </div>
+                </div>
+
+
                 <div id="dot" class="row d-flex justify-content-end mt-2 d-sm-none">
                     <p class="mr-auto">FEATURED PROJECT</p>
                     <div class="dotty mr-2 D1">D</div>
@@ -125,6 +142,7 @@
         </section>
     </main>
         </div>
+
 
 
 
